# planitpoker-jira-upload-sanitizer

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
src/: csv_writer.rs  jira_export_struct.rs  main.rs  out_writer.rs  xml_reader.rs
